--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="Twilight Teams For Your Business" />
     <meta name="keywords"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="Twilight Teams For Your Business" />
     <meta property="og:title" content="Twilight Teams - Enterprise Web Developer - Mobile App Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landy.website/" />
+    <meta property="og:url" content="www.twilighteams.tech" />
     <meta property="og:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="Twilight Teams For Your Business" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Landy" />
+    <meta property="og:site_name" content="Twilight Teams" />
 
     <meta property="twitter:title" content="Twilight Teams - Enterprise Web Developer - Mobile App Developer" />
     <meta property="twitter:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="twitter:site" content="https://landy.website/" />
+      content="Twilight Teams For Your Business" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
